fix logo overflow add body padding

--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ body {
   font-family: "Rubik", sans-serif;
   box-sizing: border-box;
   font-size: 1.6rem;
+  padding: 2rem;
 }
 
 .btn {
@@ -50,7 +51,7 @@ button {
   justify-content: space-between;
 }
 .container__header__logo {
-  max-width: 300px;
+  max-height: 10rem;
 }
 .container__header__buttons {
   display: flex;
