--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -6,7 +6,7 @@
     justify-content: space-between;
 
     &__logo {
-        max-width: 300px;
+        max-height: 10rem;
     }
 
     &__buttons {
